--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://www.emailthis.me/extension-boilerplate",
   "devDependencies": {
+    "aliasify": "^2.1.0",
     "babel-core": "^6.1.2",
     "babel-preset-es2015": "^6.1.2",
     "babelify": "^7.3.0",
@@ -54,5 +55,13 @@
     "trailingComma": "es5",
     "semi": false,
     "singleQuote": true
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.24.1",
+    "node-gyp": "^3.7.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.3.3"
   }
 }
