--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "aliasify": "^2.1.0",
     "babel-core": "^6.1.2",
-    "babel-preset-es2015": "^6.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "cross-env": "^5.2.0",
@@ -58,10 +59,15 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "connected-react-router": "^4.3.0",
+    "immutable": "^3.8.2",
     "node-gyp": "^3.7.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.3.3"
   }
 }
