--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "devDependencies": {
     "aliasify": "^2.1.0",
     "babel-core": "^6.1.2",
-    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
@@ -59,9 +62,12 @@
     "singleQuote": true
   },
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
     "babel-preset-react": "^6.24.1",
+    "bandprotocol": "^0.4.11",
     "connected-react-router": "^4.3.0",
     "immutable": "^3.8.2",
+    "isomorphic-webcrypto": "^1.6.0",
     "node-gyp": "^3.7.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
