--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
   "dependencies": {
     "autobind-decorator": "^2.1.0",
     "babel-preset-react": "^6.24.1",
-    "bandprotocol": "^0.4.11",
+    "bandprotocol": "0.5.2",
     "connected-react-router": "^4.3.0",
     "immutable": "^3.8.2",
+    "isomorphic-fetch": "^2.2.1",
     "isomorphic-webcrypto": "^1.6.0",
     "node-gyp": "^3.7.0",
     "react": "^16.4.1",
