--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "dependencies": {
     "autobind-decorator": "^2.1.0",
     "babel-preset-react": "^6.24.1",
-    "bandprotocol": "0.5.2",
+    "bandprotocol": "0.5.7",
+    "bignumber.js": "^7.2.1",
     "connected-react-router": "^4.3.0",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
