--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
   "dependencies": {
     "autobind-decorator": "^2.1.0",
     "babel-preset-react": "^6.24.1",
-    "bandprotocol": "0.5.7",
+    "bandprotocol": "0.5.9",
     "bignumber.js": "^7.2.1",
     "connected-react-router": "^4.3.0",
     "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-webcrypto": "^1.6.0",
+    "moment": "^2.22.2",
     "node-gyp": "^3.7.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
